--- a/inst/report/word_report/SignalDetectionReport.Rmd
+++ b/inst/report/word_report/SignalDetectionReport.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "`r params$disease` - `r params$country`"
-subtitle: "Signal Detection Report"
+subtitle: "`r params$title`"
 date: "Report generated on `r Sys.Date()`"
 lang: "en"
 output: 
@@ -17,6 +17,7 @@ params:
   signals_padded: NULL
   signals_agg: NULL
   intervention_date: NULL
+  title: "Signal Detection Report"
 
 ---
 
