--- a/inst/report/html_report/SignalDetectionReport_body.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_body.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Signal Detection Report - `r params$country`"
+title: "`r params$title`"
 date: "Report generated on `r Sys.Date()`"
 lang: "en"
 
@@ -13,6 +13,7 @@ params:
   signals_padded: NULL
   signals_agg: NULL
   intervention_date: NULL
+  title: "Signal Detection Report"
 ---
 
 ```{r}
