increase dinamically card size for strata time-series

--- a/inst/report/html_report/SignalDetectionReport_strata.Rmd
+++ b/inst/report/html_report/SignalDetectionReport_strata.Rmd
@@ -54,13 +54,21 @@ txt <- NULL
 htmltools::tagList(plotly::ggplotly(ggplot2::ggplot()))
 ```
 
-Row {.tabset}
+```{r}
+# height of card: 460
+# height of tab row: 35
+# elements per row: 8 - 10
+
+tabrows <- ceiling(number_stratum/8)
+```
+
+`r paste0("Row {.tabset data-height=", 425+tabrows*35, "}")`
 -------------------------------------------------------------------------------
 <!-- Print plot for each stratum -->
 
 ```{r, results='asis'}
 for(st in unique(df$stratum)){
-  cat("### timeseries -", st, "\n")
+  cat("###", st, "\n")
   
   plot_stratum <- plot_time_series(
     df %>% dplyr::filter(.data[["stratum"]] == st),
